--- a/sneaker/set_bill.html
+++ b/sneaker/set_bill.html
@@ -121,6 +121,10 @@
                             <p>Trạng thái: </p>
                             <div class="status">{{sp.status}}</div>
                         </div>
+                        <div class="set_text_line_2">
+                            <p>người mua: </p>
+                            <div class="status">{{sp.name_accound}}</div>
+                        </div>
                     </div>
                 </div>
             </div>
