--- a/sneaker/feedback.html
+++ b/sneaker/feedback.html
@@ -377,7 +377,7 @@
         </div>
 
         <div class="end">
-            <p>Copyright ©2021 Kỳ Hoàng </p>
+            <p>Copyright ©2021 Hoàng Anh Kỳ, Đỗ Đan Trường, Lê Đại Dương</p>
         </div>
     </footer>
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
