--- a/sneaker/favorites.html
+++ b/sneaker/favorites.html
@@ -409,7 +409,7 @@
         </div>
 
         <div class="end">
-            <p>Copyright ©2021 Kỳ Hoàng </p>
+            <p>Copyright ©2021 Hoàng Anh Kỳ, Đỗ Đan Trường, Lê Đại Dương</p>
         </div>
     </footer>
     <script src="./AngularJS/get_favorite.js"></script>
