--- a/sneaker/sneaker.html
+++ b/sneaker/sneaker.html
@@ -505,7 +505,7 @@
         </div>
 
         <div class="end">
-            <p>Copyright ©2021 Kỳ Hoàng </p>
+            <p>Copyright ©2021 Hoàng Anh Kỳ, Đỗ Đan Trường, Lê Đại Dương</p>
         </div>
     </footer>
     <script src="./AngularJS/get_product.js"></script>
