--- a/sneaker/sneaker.html
+++ b/sneaker/sneaker.html
@@ -31,10 +31,8 @@
         <div class="nav">
             <div class="Nav-Left">
                 <ul>
-                    <li> <a href="#"> <i class="fa fa-list-ul"></i></a></li>
                     <li>
-                        <a href="./Index.html"> Trang chủ </a>
-                        <div class="spam"></div>
+                        <a href="./Index.html"> <img src="./IMG/logo.png" class="logoShop"> </a>
                     </li>
                     <li>
                         <a href="./feedback.html"> Phản hồi </a>
